--- a/homepage.html
+++ b/homepage.html
@@ -24,6 +24,15 @@
   h1{
   font-family: 'Oswald', sans-serif;
   }
+	@media (max-width: 768px) {
+      .navbar-collapse {
+        position: absolute;
+        background-color: black;
+        width: 100%;
+        top: 50px;
+        z-index: 1;
+      }
+  }
   </style>
 
 </head>
