--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
                 </div>
             </header>
            
-            <section class="py-5 bg-light" id="scroll-target">
+            <section class="py-5 ">
                  <div class="container px-5 my-5">
                     <div class="row gx-5 align-items-center">
                           <div class="col-lg-6">
@@ -98,7 +98,7 @@
                 </div>
             </section>
 
-            <section class="py-5 bg-light" id="scroll-target">
+            <section class="py-5">
                 <div class="container px-5 my-5">
                      <div class="row gx-5 align-items-center">
                         <div class="col-lg-6">
