--- a/about.html
+++ b/about.html
@@ -70,11 +70,11 @@
                 </div>
             </header>
            
-            <section class="py-5 ">
+            <section class="py-5 " id="scroll-target">
                  <div class="container px-5 my-5">
                     <div class="row gx-5 align-items-center">
                           <div class="col-lg-6">
-                            <video width="620" height="360" controls >
+                            <video width="400" height="360" controls >
                              <source src="Video1.mp4" type="video/mp4">
                             </video>
                         </div>
@@ -102,7 +102,7 @@
                 <div class="container px-5 my-5">
                      <div class="row gx-5 align-items-center">
                         <div class="col-lg-6">
-                           <video width="620" height="360" controls >
+                           <video width="400" height="360" controls >
                             <source src="Video2.mp4" type="video/mp4">
                            </video>
                         </div>
