--- a/about.html
+++ b/about.html
@@ -114,7 +114,7 @@
                 </div>
            </section>
             
-            <section class="py-5 bg-light">
+            <section class="py-5">
                 <div class="container px-5 my-5">
                     <div class="text-center">
                        <i><h2 class="fw-bolder">Our team</h2></i> 
