--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
             </nav>
             
                 <div class="container px-5">
-                    <div class="bg-light rounded-3 py-5 px-4 px-md-10 mb-5">
+                    <div class="rounded-3 py-5 px-4 px-md-10 mb-5">
                         <div class="text-center mb-5">
                             <div class="feature bg-dark bg-gradient text-white rounded-3 mb-3"><i class="bi bi-envelope"></i></div>
                             <h1 class="fw-bolder">Get in touch</h1>
