--- a/index.html
+++ b/index.html
@@ -64,10 +64,9 @@
                     </div>
                   </div>
                   <div class="col">
-                    <a href="#"  data-mdb-toggle="modal" data-mdb-target="#exampleModal">Forgot password?</a>
-                      <div class="modal top fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-                         aria-hidden="true" data-mdb-backdrop="true" data-mdb-keyboard="true">
-                         <div class="modal-dialog" style="width: 300px;">
+                    <a href="#" data-mdb-toggle="modal" data-mdb-target="#exampleModal" style="white-space: nowrap;">Forgot password?</a>
+                    <div class="modal top fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" data-mdb-backdrop="true" data-mdb-keyboard="true">
+                      <div class="modal-dialog text-center" style="width: 300px;">                   
                             <div class="modal-content text-center">
                               <div class="modal-header h5 text-white bg-danger justify-content-center">
                               Password Reset
