--- a/appointment.html
+++ b/appointment.html
@@ -171,7 +171,7 @@
 
         $("#addNoteModal").modal("hide");
         } else {
-          alert("The Date and Time you chose is already exists.");
+          alert("The Date and Time you chose is already exists or chosen by other client.");
         }
     })
       .catch((error) => {
