--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
          color: white
         }
         h1,p{
-         font-family: 'Oswald', sans-serif;
+            font-family: 'Nanum Gothic', sans-serif;
          }
     </style>
         
@@ -48,7 +48,7 @@
                                 <a class="nav-link" href="pricing.html">Pricing</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="about.html">About</a>
+                                <a class="nav-link" href="about.html">About Us</a>
                             </li>
                             <li id="contact" class="nav-item ">
                                 <a class="nav-link" href="contact.html">Contact Us</a>
@@ -62,7 +62,7 @@
             </nav>
             
                 <div class="container px-5">
-                    <div class="rounded-3 py-5 px-4 px-md-10 mb-5">
+                    <div class=" rounded-3 py-5 px-4 px-md-10 mb-5">
                         <div class="text-center mb-5">
                             <div class="feature bg-dark bg-gradient text-white rounded-3 mb-3"><i class="bi bi-envelope"></i></div>
                             <h1 class="fw-bolder">Get in touch</h1>
