--- a/homepage.html
+++ b/homepage.html
@@ -2,145 +2,123 @@
 <html lang="en">
 <head>
 
-  <title>Ilokano's Laundry Shop</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="shortcut icon" type="x-icon" href="LOGO.jpg">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Pacifico&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <title>Ilokano's Laundry Shop</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" type="x-icon" href="LOGO.jpg">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Pacifico&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
-	<script>
-            "use strict";
-            
-            !function() {
-              var t = window.driftt = window.drift = window.driftt || [];
-              if (!t.init) {
-                if (t.invoked) return void (window.console && console.error && console.error("Drift snippet included twice."));
-                t.invoked = !0, t.methods = [ "identify", "config", "track", "reset", "debug", "show", "ping", "page", "hide", "off", "on" ], 
-                t.factory = function(e) {
-                  return function() {
-                    var n = Array.prototype.slice.call(arguments);
-                    return n.unshift(e), t.push(n), t;
-                  };
-                }, t.methods.forEach(function(e) {
-                  t[e] = t.factory(e);
-                }), t.load = function(t) {
-                  var e = 3e5, n = Math.ceil(new Date() / e) * e, o = document.createElement("script");
-                  o.type = "text/javascript", o.async = !0, o.crossorigin = "anonymous", o.src = "https://js.driftt.com/include/" + n + "/" + t + ".js";
-                  var i = document.getElementsByTagName("script")[0];
-                  i.parentNode.insertBefore(o, i);
-                };
-              }
-            }();
-            drift.SNIPPET_VERSION = '0.3.1';
-            drift.load('xtnfpyrynrwm');
-            </script>
-
-  <style>
-  .carousel-inner img {
-      width: 100%; 
-      margin: auto;
-      min-height:200px;
-  }
-  h1{
-  font-family: 'Oswald', sans-serif;
-  }
-	@media (max-width: 768px) {
-      .navbar-collapse {
-        position: absolute;
-        background-color: black;
-        width: 100%;
-        top: 50px;
-        z-index: 1;
-      }
-  }
-  </style>
-
 </head>
+
 <body>
+    <nav class="navbar navbar-inverse" style="background-color: black;">
+        <div class="container">
+            <a class="navbar-brand" >Ilokano's Laundry Shop</a>
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>                        
+            </button>
+          <div class="collapse navbar-collapse" id="myNavbar">
+            <ul class="nav navbar-nav navbar-right">
+              <li class="active">
+                <a class="nav-link" href="homepage.html">Home</a>
+              </li>
+              <li><a href="appointment.html">Appointment</a></li>
+              <li><a href="pricing.html">Pricing</a></li>
+              <li><a href="about.html">About Us</a></li>
+              <li><a href="contact.html">Contact Us</a></li>
+              <li id="logout"><a href="#"><i class="fas fa-sign-out-alt"></i> LogOut</a></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
 
-<nav class="navbar navbar-inverse" style="background-color: black;">
-  <div class="container">
-      <a class="navbar-brand" >Ilokano's Laundry Shop</a>
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>                        
-      </button>
-    <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav navbar-right">
-        <li class="active">
-          <a class="nav-link" href="homepage.html">Home</a>
-        </li>
-        <li><a href="appointment.html">Appointment</a></li>
-        <li><a href="pricing.html">Pricing</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact Us</a></li>
-        <li id="logout"><a href="#"><i class="fas fa-sign-out-alt"></i> LogOut</a></li>
-      </ul>
+    <div class="container bg-body-secondary mt-2 h-200 border border-primary">
+        <h1 class="my-5">Select an image to display for HomePage</h1>
+
+        <input type="file" accept="image/*" id="imageInput">
+
+        <div class="my-5">
+            <button onclick="uploadImage()" type="button" class="btn btn-success">Upload Image</button>
+        </div>
+
+        <div class="mb-3">
+            <img src="" alt="Uploaded Image" id="uploadedImage" style="width: 300px; height: 200px; object-fit: contain; border:solid 2px black;">
+        </div>
+
+        <div id="imageContainer" class="mt-4 bg-primary justify-content-between"></div>
     </div>
-  </div>
-</nav>
 
-<div id="myCarousel" class="carousel slide" data-ride="carousel">   
-    <div class="carousel-inner" role="listbox">
-      <div class="item active">
-        <img src="LOGO1.jpg" alt="Image">     
-      </div>
-      <div class="item">
-        <img src="LOGO2.jpg" alt="Image">     
-      </div>
-    </div>
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-</div>
+   
+    <script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-storage.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-auth.js"></script>
 
-<div class="container text-center">    
-  <h1>"Fresh Laundry made easy"</h1><br>
-</div>
+    <script>
 
+        const firebaseConfig = {
+            apiKey: "AIzaSyAQwGVIDyajoCoTAwqoiuti7XNOLSjB4Dc",
+            authDomain: "ilokano-s-laundry-shop.firebaseapp.com",
+            projectId: "ilokano-s-laundry-shop",
+            storageBucket: "ilokano-s-laundry-shop.appspot.com",
+            messagingSenderId: "196446596227",
+            appId: "1:196446596227:web:5e5a6bfec72f404b407fb6",
+            measurementId: "G-EN4123PZX6"
+        };
+
+        const app = firebase.initializeApp(firebaseConfig);
+        const auth = firebase.auth();
+
+    document.getElementById("logout").addEventListener("click", function() {
+    auth.signOut().then(() => {
+      console.log('Sign-out successful.');
+      alert('Logging out Successfully');
+      window.location.href = "index.html";
+      document.getElementById('logout').style.display = 'none';
+    }).catch((error) => {
+      console.log('An error happened:', error);
+    });
+  });
+
+function uploadImage() {
+    const imageInput = document.getElementById('imageInput');
+    const file = imageInput.files[0];
+
+    if (file) {
+        const storageRef = firebase.storage().ref();
+        const imageRef = storageRef.child(`carousel/${file.name}`);
+
+        imageRef.put(file).then((snapshot) => {
+            console.log('Image uploaded successfully!');
+            
+            imageRef.getDownloadURL().then((url) => {
+                document.getElementById('uploadedImage').src = url;
+
+                storageRef.child('carousel').listAll().then((result) => {
+                    const images = result.items.map((item) => item.getDownloadURL());
+                    Promise.all(images).then((urls) => {
+                        displayImages(urls);
+                    });
+                });
+
+                alert('Image uploaded successfully to the client page');
+            });
+        }).catch((error) => {
+            console.error('Error uploading image:', error.message);
+        });
+    } else {
+        console.error('No file selected!');
+    }
+}
+</script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
-
-<script type="module">
-  
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.10.0/firebase-app.js";
-  import {getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword, signOut } from "https://www.gstatic.com/firebasejs/9.10.0/firebase-auth.js";
-  
-  const firebaseConfig = {
-    apiKey: "AIzaSyAQwGVIDyajoCoTAwqoiuti7XNOLSjB4Dc",
-    authDomain: "ilokano-s-laundry-shop.firebaseapp.com",
-    projectId: "ilokano-s-laundry-shop",
-    storageBucket: "ilokano-s-laundry-shop.appspot.com",
-    messagingSenderId: "196446596227",
-    appId: "1:196446596227:web:5e5a6bfec72f404b407fb6",
-    measurementId: "G-EN4123PZX6"
-  };
-  
-  const app = initializeApp(firebaseConfig);
-  const auth = getAuth();  
-      document.getElementById("logout").addEventListener("click", function() {
-		  signOut(auth).then(() => {
-			  console.log('Sign-out successful.');
-			  alert('Logging out Successfully');
-        window.location.href = "index.html";
-			  document.getElementById('logout').style.display = 'none';
-			}).catch((error) => {			  
-			  console.log('An error happened.');
-			});		  		  
-	  });
-
-  </script>
-  
 </html>
