--- a/homepage - Client.html
+++ b/homepage - Client.html
@@ -4,6 +4,7 @@
 
   <title>Ilokano's Laundry Shop</title>
   <meta charset="utf-8">
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" type="x-icon" href="LOGO.jpg">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -60,8 +61,7 @@ h1 {
   top: 50px;
   z-index: 1;
 }
-}
-      
+} 
   </style>
 
   <script type="module">
@@ -125,44 +125,45 @@ const firebaseConfig = {
 </head>
 <body>
 
- <nav class="navbar navbar-inverse" style="background-color: black;">
-  <div class="container">
-      <a class="navbar-brand" >Ilokano's Laundry Shop</a>
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>                        
-      </button>
-    <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav navbar-right">
-        <li class="active">
-          <a class="nav-link" href="homepage - Client.html">Home</a>
-        </li>
-        <li><a href="appointment - Client.html">Appointment</a></li>
-        <li><a href="pricing - Client.html">Pricing</a></li>
-        <li><a href="about - Client.html">About Us</a></li>
-        <li><a href="contact - Client.html">Contact Us</a></li>
-        <li id="logout"><a href="#"><i class="fas fa-sign-out-alt"></i> LogOut</a></li>
-      </ul>
+  <nav class="navbar navbar-inverse" style="background-color: black;">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>                        
+        </button>
+        <a class="navbar-brand" href="#">Ilokano's Laundry Shop</a>
+      </div>
+      <div class="collapse navbar-collapse" id="myNavbar">
+        <ul class="nav navbar-nav navbar-right">
+          <li class="active"><a href="homepage - Client.html">Home</a></li>
+          <li><a href="appointment - Client.html">Appointment</a></li>
+          <li><a href="pricing - Client.html">Pricing</a></li>
+          <li><a href="about - Client.html">About Us</a></li>
+          <li><a href="contact - Client.html">Contact Us</a></li>
+          <li id="logout"><a href="#"><i class="fas fa-sign-out-alt"></i> LogOut</a></li>
+        </ul>
+      </div>
     </div>
-  </div>
-</nav>
-
-  <div id="myCarousel" class="carousel slide" data-ride="carousel">
-    <div class="carousel-inner" role="listbox" id="carouselImages">
+  </nav>
+  
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+      <div class="carousel-inner" role="listbox" id="carouselImages">
+      </div>
+      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
+  
+    <div class="container text-center">
+      <h1>"Fresh Laundry made easy"</h1><br>
+    </div>
 
-  <div class="container text-center">
-    <h1>"Fresh Laundry made easy"</h1><br>
-  </div>
-</body>
-</html>
+  </body>
+  </html>
